add tracking code

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -43,7 +43,6 @@ input[type=checkbox]
 // select:invalid
 //   color: green
 
-
 .disabled
   pointer-events: none
   opacity: 0.5
@@ -134,3 +133,7 @@ input[type=checkbox]
     filter: drop-shadow(0px 0px 2vw rgba(255, 255, 255, 0.66))
   100%
     filter: drop-shadow(0px 0px 1vw rgba(255, 255, 255, 0))
+
+#gim-bot-tool-button
+  img
+    margin: 0 !important
