--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -81,18 +81,18 @@ input[type=checkbox]
     width: 33.33% !important
 
 
-.video-swiper
-  position: relative
-  left: 22px
-  .swiper-wrapper
-    display: flex
-    align-items: center
-  .swiper-slide
-    width: calc(33.33% - 44px) !important
-    opacity: 0.6
-  .swiper-slide-active
-    width: 33.33% !important
-    opacity: 1
+// .video-swiper
+//   position: relative
+//   left: 22px
+//   .swiper-wrapper
+//     display: flex
+//     align-items: center
+//   .swiper-slide
+//     width: calc(33.33% - 44px) !important
+//     opacity: 0.6
+//   .swiper-slide-active
+//     width: 33.33% !important
+//     opacity: 1
 
 .news-swiper
   .swiper-slide
