--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -30,9 +30,9 @@ body
   &.show-peoplebox
     overflow: hidden
 
-select
-  -webkit-appearance: menulist-button
-  color: #9ca3af
+// select
+//   -webkit-appearance: menulist-button
+//   color: #9ca3af
 
 h1, h2, h3, h4, div, p, .block, .flex
   white-space: normal
