--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -27,7 +27,8 @@ body
   &.show-cookie-alert,
   &.show-global-alert,
   &.show-game-page,
-  &.show-peoplebox
+  &.show-peoplebox,
+  &.menu-open
     overflow: hidden
 
 // select
@@ -134,6 +135,9 @@ input[type=checkbox]
   100%
     filter: drop-shadow(0px 0px 1vw rgba(255, 255, 255, 0))
 
+body.menu-open
+  #gim-bot-tool
+    display: none
 #gim-bot-tool-button
   img
     margin: 0 !important
