--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -141,6 +141,8 @@ input[type=checkbox]
 body.menu-open
   #gim-bot-tool
     display: none
+#gim-bot-tool
+  z-index: 500 !important
 #gim-bot-tool-button
   img
     margin: 0 !important
