--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -123,7 +123,7 @@ input[type=checkbox]
 //     @media (max-width: 991px)
 //       width: 50% !important
 
-.EDITOR-CONTENT
+.MCE-CONTENT
   img
     display: block
     margin: 0 auto
