Thank you GAMANIA for giving me a wonderful day.

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -27,7 +27,8 @@ body
   &.show-cookie-alert,
   &.show-global-alert,
   &.show-game-page,
-  &.show-peoplebox
+  &.show-peoplebox,
+  &.mc-open
     overflow: hidden
 body
   &.menu-open
