Thank you GAMANIA for giving me a wonderful day.

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -146,6 +146,9 @@ body.menu-open
     display: none
 #gim-bot-tool
   z-index: 500 !important
+  @media (max-width:991px)
+    bottom: 70px !important
+    right: 8px !important
 #gim-bot-tool-button
   img
     margin: 0 !important
