Thank you GAMANIA for giving me a wonderful day.

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -101,22 +101,22 @@ input[type=checkbox]
 //     width: 33.33% !important
 //     opacity: 1
 
-.news-swiper
-  .swiper-slide
-    width: 58% !important
-    .item
-      transform: scale(0.85)
-      opacity: 0.6
-  .swiper-slide-prev
-    .item
-      transform-origin: right center
-  .swiper-slide-next
-    .item
-      transform-origin: left center
-  .swiper-slide-active
-    .item
-      transform: scale(1)
-      opacity: 1
+// .news-swiper
+//   .swiper-slide
+//     width: 58% !important
+//     .item
+//       transform: scale(0.85)
+//       opacity: 0.6
+//   .swiper-slide-prev
+//     .item
+//       transform-origin: right center
+//   .swiper-slide-next
+//     .item
+//       transform-origin: left center
+//   .swiper-slide-active
+//     .item
+//       transform: scale(1)
+//       opacity: 1
 
 // .sale-swiper
 //   .swiper-slide
@@ -124,6 +124,13 @@ input[type=checkbox]
 //     @media (max-width: 991px)
 //       width: 50% !important
 
+.swiper-news
+  .swiper-wrapper
+    @apply items-stretch
+  .swiper-slide
+    @apply flex flex-col h-auto
+    .item
+      @apply grow
 .MCE-CONTENT
   img
     display: block
